test/modules/deitz/test_module_class_conflict.good
test_module_class_conflict.chpl:9: error: Illegal super class
